Release notes: 
    - Feature 1 
    - Feature 2