@@ -7,13 +7,15 @@ before_deploy:
     - export RELEASE_NOTES=$(make release-notes)
     - export VERSION_TAG=$(make tag BUILD_BRANCH=${TRAVIS_BRANCH} BUILD_NUM=${TRAVIS_BUILD_NUMBER})
     - export TRAVIS_TAG=${TRAVIS_TAG:-$(${VERSION_TAG})}
+    - make multichain-artifacts BUILD_TAG=${TRAVIS_TAG}
     - make hyperledger-fabric-artifacts BUILD_TAG=${TRAVIS_TAG}
+    - make corda-artifacts BUILD_TAG=${TRAVIS_TAG}
     - git tag $TRAVIS_TAG
 deploy:
   provider: releases
   api_key: "$GITHUB_TOKEN"
   file_glob: true
-  file: .target/hyperledger-fabric/*
+  file: .target/**/*
   skip_cleanup: true
   prerelease: $PRERELEASE
   name: $TRAVIS_TAG
