@@ -1,8 +1,0 @@
-###################################################################################
-#                          contribs/dovetail                                      #
-###################################################################################
-FROM scratch
-
-VOLUME [ /var/lib/wi/wi-contrib.git ]
-
-COPY . /var/lib/wi/wi-contrib.git/
