@@ -1,3 +1,5 @@
 Release notes: 
-    - Feature 1 
-    - Feature 2
+    - Added support for flogo 0.9.0 runtime
+    - Added hyperledger fabric extensions
+    - Added hyperledger fabric client extensions
+    - Added hyperledger fabric functions
